# power

./: .gitignore  Cargo.toml  NOTICE  README.md
correlation/: README.md  counter.v  report_power.tcl  run.sh
docs/: engines-integration.md
examples/block/: block.pwr  block.saif  block.v  block.vcd  tiny.lib
examples/counter/: cells_sim.v  counter.emir  counter.fst  counter.place  counter.saif  counter.thermal  counter_fst.pwr  counter_pdn.def  counter_pdn.lef  counter_saif.emir  counter_saif.pwr  counter_tb.v  counter_worst.emir  counter_worst.pwr  run_loop.sh
src/: activity.rs  engine.rs  job.rs  lib.rs  main.rs  names.rs  power.rs  saif.rs  vcd.rs
tests/: example.rs
