[package]
name = "vyges-power"
version = "0.1.14"
edition = "2021"
description = "Power analysis: per-instance leakage + dynamic power and the activity map that closes char -> power -> em-ir."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/power"

# No third-party deps (builds/tests offline). The shared parsers + design DB come
# from the vyges-loom foundation — a sibling-checkout path dep in dev; release
# pins a git/version dep.
[dependencies]
# `fst` pulls loom's FST binary-waveform reader (and, transitively, miniz_oxide for
# zlib). Power is the one engine that consumes waveforms, so it opts in here.
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main", features = ["fst"] }
vyges-events = { git = "https://github.com/vyges-tools/events", branch = "main", default-features = false }

[[bin]]
name = "vyges-power"
path = "src/main.rs"

[lib]
name = "vyges_power"
path = "src/lib.rs"
